2006-11-24  Lars Hansen  <larsh@soem.dk>

	* tramp.el (tramp-default-method): Under Windows, change from
	plink to pscp.
	(tramp-copy-failed-regexp, tramp-action-copy-failed): Add.
	(tramp-actions-copy-out-of-band):
	Add pair (tramp-copy-failed-regexp tramp-action-copy-failed).
	(tramp-action-out-of-band): Move "Permission denied" handling to
	tramp-action-copy-failed.
	(tramp-do-copy-or-rename-file-out-of-band): unwind-protect killing of
	process buffer.

2006-11-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-yn-prompt-regexp): Fix regexp.

2006-11-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): cl and custom are always required.

2006-11-11  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-unified-filenames): Improve previous doc fix.

2006-11-10  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-unified-filenames): Doc fix (Nil -> nil).

2006-11-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): scp is the default method.

2006-11-05  Lars Hansen  <larsh@soem.dk>

	* tramp.el (with-parsed-tramp-file-name): Correct debug spec.
	Highlight as keyword.
	(tramp-do-copy-or-rename-file): Correct data for
	'file-already-exists.  Don't call tramp-method-out-of-band-p for
	local files.
	(tramp-touch): Quote file name.

2006-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-yn-prompt-regexp): Add question from plink.
	(tramp-completion-mode): Remove clause (not
	tramp-unified-filenames), because the function is called in other
	context too, where this check results in wrong results in the
	XEmacs case on Windows.
	(tramp-touch): UTC handling is not possible for XEmacs.

2006-08-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.54 released.

	* tramp.el (tramp-convert-file-attributes): Call `eql' instead of
	`=', because `tramp-get-remote-gid' might not always return an
	integer when expected.

2006-07-02  Michael Albinus  <michael.albinus@gmx.de>
